xrandr: Free GnomeRRConfigs on stop

They won't leak if the plugin is stopped and started again but they do
if we reach finalize() which isn't really a problem but there's no
reason to keep them around anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=740151